--- a/EasyLib/app/src/main/res/layout-normal/library_activity.xml
+++ b/EasyLib/app/src/main/res/layout-normal/library_activity.xml
@@ -177,6 +177,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="16dp"
+                            android:onClick="showAllNews"
                             android:text="All News" />
                     </LinearLayout>
 
@@ -208,6 +209,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="16dp"
+                            android:onClick="showAllEvents"
                             android:text="All Events" />
                     </LinearLayout>
 
@@ -239,6 +241,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="16dp"
+                            android:onClick="showAllBooks"
                             android:text="All Books" />
                     </LinearLayout>
 
