--- a/EasyLib/app/src/main/res/layout-normal/fragment_home_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_home_item.xml
@@ -57,7 +57,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="See Library"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_home_item_recycle_book" />
