--- a/EasyLib/app/src/main/res/layout-normal/fragment_home_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_home_item.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:nestedScrollingEnabled="false"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -9,7 +10,7 @@
         android:id="@+id/fragment_home_item_library_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/round_label_gray"
         android:fontFamily="serif-monospace"
         android:text="Library Name"
@@ -23,7 +24,7 @@
         android:id="@+id/fragment_home_item_recycle_news"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_home_item_library_name">
