--- a/EasyLib/app/src/main/res/layout-normal/event_activity.xml
+++ b/EasyLib/app/src/main/res/layout-normal/event_activity.xml
@@ -112,12 +112,22 @@
 
                     </LinearLayout>
 
+                    <TextView
+                        android:id="@+id/event_activity_error_alreadyJoined"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="Already Reserved"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/holo_red_light"
+                        android:textSize="18sp"
+                        android:visibility="invisible" />
+
                     <Button
                         android:id="@+id/event_activity_reservation_button"
                         style="@style/Widget.AppCompat.Button.Borderless.Colored"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
                         android:onClick="setReservation"
                         android:text="Reserve Seat"
                         android:textColor="@android:color/holo_green_light"
