--- a/EasyLib/app/src/main/res/layout-normal/book_list_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/book_list_item.xml
@@ -40,6 +40,7 @@
                 android:layout_weight="1"
                 android:singleLine="true"
                 android:text="Title"
+                android:textAlignment="center"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -50,6 +51,7 @@
                 android:layout_weight="1"
                 android:singleLine="true"
                 android:text="Author"
+                android:textAlignment="center"
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
