--- a/EasyLib/app/src/main/res/layout-normal/fragment_calendar_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_calendar_item.xml
@@ -21,6 +21,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_calendar_item_date"
-        tools:listitem="@layout/fragment_queue_item" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_calendar_item_date" />
 </android.support.constraint.ConstraintLayout>
