--- a/EasyLib/app/src/main/res/layout-normal/login.xml
+++ b/EasyLib/app/src/main/res/layout-normal/login.xml
@@ -2,10 +2,11 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/login_all_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Login.LoginActivity"
-    android:background="@drawable/login_back">
+    android:background="@drawable/login_back"
+    tools:context=".Activities.Login.LoginActivity">
 
     <ImageButton
         android:id="@+id/reg_bt"
@@ -101,11 +102,12 @@
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <TextView
-        android:id="@+id/text_error"
+        android:id="@+id/login_text_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="serif"
         android:text="Fields not filled up"
+        android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
         android:typeface="normal"
@@ -163,19 +165,20 @@
             style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:progressDrawable="@color/colorWhite"
+            android:progressDrawable="@android:color/white"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/prog_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Login"
+            android:text="Loading"
             android:textColor="@android:color/white"
             android:textSize="24sp"
             android:textStyle="bold|italic"
