--- a/EasyLib/app/src/main/res/layout-normal/fragment_queue_item.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_queue_item.xml
@@ -70,8 +70,9 @@
                 android:id="@+id/queue_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginRight="8dp"
+                android:layout_weight="0.3"
+                android:singleLine="true"
                 android:text="Title"
                 android:textAlignment="center"
                 android:textSize="24sp"
@@ -83,6 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginRight="8dp"
+                android:singleLine="true"
                 android:text="Location"
                 android:textAlignment="center"
                 android:textSize="18sp" />
@@ -94,7 +96,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0"
-            android:layout_marginTop="10dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="13dp"
             android:text="9"
             android:textSize="40sp" />
     </LinearLayout>
