--- a/EasyLib/app/src/main/res/layout-normal/event_activity.xml
+++ b/EasyLib/app/src/main/res/layout-normal/event_activity.xml
@@ -87,6 +87,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="24dp"
+                        android:layout_marginBottom="16dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -116,12 +117,10 @@
                         android:id="@+id/event_activity_error_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:text="No More Seats"
                         android:textAlignment="center"
                         android:textColor="@android:color/holo_red_light"
                         android:textSize="18sp"
-                        android:visibility="invisible" />
+                        android:visibility="gone" />
 
                     <Button
                         android:id="@+id/event_activity_reservation_button"
