--- a/EasyLib/app/src/main/res/layout-xlarge/main.xml
+++ b/EasyLib/app/src/main/res/layout-xlarge/main.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="60dp"
         android:background="@drawable/topnav_back"
         android:orientation="horizontal"
         android:paddingLeft="3dp"
@@ -61,22 +61,26 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"></FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+    </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navbar"
-        android:layout_width="wrap_content"
-        android:layout_height="90dp"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
         android:background="@drawable/botnav_back"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
         app:itemBackground="@android:color/transparent"
-        app:itemIconSize="55dp"
+        app:itemIconSize="40dp"
         app:itemIconTint="@color/nav_item"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_items"></android.support.design.widget.BottomNavigationView>
+        app:menu="@menu/bottom_nav_items">
+
+    </android.support.design.widget.BottomNavigationView>
 
 </android.support.constraint.ConstraintLayout>
