--- a/EasyLib/app/src/main/res/layout-normal/book_activity.xml
+++ b/EasyLib/app/src/main/res/layout-normal/book_activity.xml
@@ -32,6 +32,7 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="8dp"
                 android:overScrollMode="never"
+                android:scrollbars="none"
                 android:scrollbarSize="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
