--- a/EasyLib/app/src/main/res/layout-normal/fragment_queue.xml
+++ b/EasyLib/app/src/main/res/layout-normal/fragment_queue.xml
@@ -33,6 +33,7 @@
         android:clipToPadding="false"
         android:overScrollMode="never"
         android:scrollbarSize="0dp"
+        android:scrollbars="none"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
