--- a/EasyLib/app/src/main/res/layout-xlarge/book_activity.xml
+++ b/EasyLib/app/src/main/res/layout-xlarge/book_activity.xml
@@ -33,6 +33,7 @@
                 android:layout_marginBottom="8dp"
                 android:overScrollMode="never"
                 android:scrollbarSize="0dp"
+                android:scrollbars="none"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
