--- a/EasyLib/app/src/main/res/layout-xlarge/list_activity.xml
+++ b/EasyLib/app/src/main/res/layout-xlarge/list_activity.xml
@@ -32,7 +32,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@color/Transparent"
                 android:overScrollMode="never"
-                android:scrollbars="vertical"
+                android:scrollbars="none"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
