--- a/EasyLib/app/src/main/res/layout-xlarge/list_activity.xml
+++ b/EasyLib/app/src/main/res/layout-xlarge/list_activity.xml
@@ -22,6 +22,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <TextView
+                android:id="@+id/activity_list_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:background="@drawable/round_label_gray"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:text="No Notifications"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:textStyle="italic"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/list_recycle"
                 android:layout_width="0dp"
